--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-select-chat (chatSelected)="setChatId($event)"></app-select-chat>
-<app-chat-area [id]="chatId" [name]="setName()" [photo]="setPhoto()"></app-chat-area>
+<app-select-chat (chatSelected)="setChatId($event)" ></app-select-chat>
+<app-chat-area [id]="chatId" [name]="setName()" [photo]="setPhoto()" [chatMessage]="setChat()"></app-chat-area>
