--- a/src/app/chat-info/chat-info.component.css
+++ b/src/app/chat-info/chat-info.component.css
@@ -1,4 +1,4 @@
-.chatInfo{
+:host{
     width: 100%;
     height: 5rem;
     background-color: rgba(14, 13, 13, 0.986);
@@ -7,6 +7,18 @@
     align-items: center;
     padding: 1rem;
     gap: 3rem;
+
+    width:-webkit-fill-available;
+}
+
+.infoChat{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  gap: 3rem;
+  align-items: center;
+
 }
 
 img{
