--- a/src/app/chat-info/chat-info.component.html
+++ b/src/app/chat-info/chat-info.component.html
@@ -1,4 +1,4 @@
-<div class="chatInfo">
+<div class="infoChat">
     <div *ngIf="photo != ''" class="photo">
         <img src={{photo}} alt="Foto usuario">
     </div>
@@ -6,3 +6,4 @@
         <h1>{{name}}</h1>
     </div>
 </div>
+
