--- a/src/app/chat-box/chat-box.component.css
+++ b/src/app/chat-box/chat-box.component.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     gap: 3rem;
+    margin: 3rem 0;;
     padding: 2rem;
     cursor: pointer;
     margin: 1rem;
