--- a/src/app/chat-info/chat-info.component.css
+++ b/src/app/chat-info/chat-info.component.css
@@ -1,5 +1,4 @@
 :host{
-    width: 100%;
     height: 5rem;
     background-color: rgba(14, 13, 13, 0.986);
     display: flex;
@@ -12,18 +11,18 @@
 }
 
 .infoChat{
-  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
   gap: 3rem;
   align-items: center;
-
+  height: 5rem;
+  padding: 1rem;
 }
 
 img{
   border-radius: 50%;
-  width: 4.5rem;    /* Defina um tamanho quadrado */
-  height: 4.5rem;      /* Igual à largura */
-  object-fit: cover;  /* Garante que a imagem preencha o círculo */
+  width: 4.5rem;   
+  height: 4.5rem;     
+  object-fit: cover;  
 }
